Fixed julekalender modal title overflow
Prevents a long title from hiding the edit and close buttons

--- a/site/julekalender/static/julekalender/julekalender.css
+++ b/site/julekalender/static/julekalender/julekalender.css
@@ -124,6 +124,9 @@ h1 {
   background-color: #5d4f8a;
 }
 
+.modal-title {
+  overflow: auto;
+}
 .modal-content {
   background-color: #fefefe;
 }
